syntax = "proto3";
package safehouse.ams.models;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.LifeSituations.Commands";

import "Models/Common/UUID.proto";
import "google/protobuf/timestamp.proto";

enum RecordType{
  CHILDREN = 0;
  CITIZENSHIP = 1;
  DOMICILE = 2;
  EDUCATION = 3;
  MIGRATION = 4;
  REGISTRATION = 5;
  SPECIALITY = 6;
}

message CreateRecordUpdateDocument{
  UUID EntityID = 1;
  google.protobuf.Timestamp DocumentDate = 2;
  UUID SurvivorId = 3;
  RecordType Type = 4;
}
