syntax = "proto3";
package safehouse.ams.models.records;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.LifeSituations.Records";

import "google/protobuf/wrappers.proto";
import "Models/Common/UUID.proto";

message ChildrenRecord {
  UUID ID = 1;
  bool HasChildren = 2;
  google.protobuf.StringValue Details = 3;
}