syntax = "proto3";
package safehouse.ams.models.records;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.LifeSituations.Records";

import "Models/Common/UUID.proto";

message CitizenshipRecord {
  UUID ID = 1;
  string Citizenship = 2;
}